<resources>
    <string name="app_name">I Save U</string>
    <string name="login_num">사번을 입력해주세요.(10자)</string>
    <string name="login_pw">비밀번호를 입력해주세요.</string>
    <string name="login_btn">로그인</string>
    <string name="check_save">아이디 저장</string>
    <string name="default_notification_channel_id">FCMID</string>
    <string name="call">119</string>
    <string name="checkPlace">발생위치보기</string>
    <string name="checkPicture">현장영상보기</string>
    <string name="checkFire_ext">소화기위치보기</string>
    <string name="monitoring">현장 스트리밍</string>
    <string name="stat">통계</string>
    <string name="map">비상대피도</string>
    <string name="possibleFire_ext">사용 가능한\n소화기 보기</string>
    <string name="forfloor">층 비상대피도</string>
    <string name="play">재생</string>
    <string name="stop">멈춤</string>
    <string name="search">검색</string>
    <string name="turnOffAnimation">애니메이션\n멈춤</string>
    <!--NavigationDraw-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_header_welcome">님, 환영합니다.</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="search_title">Search</string>

    <!--Monitoring-->
    <string name="monitoring_text">호, 영상</string>
    <string name="monitoring_back">돌아가기</string>
    <string name="monitoring_stop">종료</string>
    <string name="monitoring_start">재생시작</string>


    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen_floor_map">FullscreenFloorMapActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen_floor_map_1">FullscreenFloorMapActivity_1</string>

    <string name="voice_close_dialog">뒤로 가기를 \n한번 더 눌러주세요. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="monitoring_short">모니터링</string>
    <string name="voice_recorder">음성인식</string>
    <string name="widget_map">비상대피도</string>
    <!-- weather-->
    <string name="temperature"> °C</string>
    <string name="sunny">맑음</string>
    <string name="rain_status">mm</string>
    <string name="humidity_sign">%</string>
    <string name="wind_sign">m/s</string>
</resources>
