<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="360dp">

    <Button
        android:id="@+id/btn119"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monitoringImage"
        tools:background="##f10000" />

    <Button
        android:id="@+id/btnCheckFire_ext"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/checkFire_ext"
        app:layout_constraintStart_toEndOf="@+id/btn119"
        app:layout_constraintTop_toTopOf="@+id/btn119" />

    <Button
        android:id="@+id/btnCheckPlace"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/checkPlace"
        app:layout_constraintStart_toEndOf="@+id/btnCheckFire_ext"
        app:layout_constraintTop_toBottomOf="@+id/monitoringImage" />

    <Button
        android:id="@+id/btnMonitoring"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/checkPicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckPlace" />

    <ImageView
        android:id="@+id/appImage"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/appImage"
        app:layout_constraintTop_toTopOf="@+id/appImage" />

    <TextView
        android:id="@+id/tvMessageBody"
        android:layout_width="223dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/appImage"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/monitoringImage"
        android:layout_width="370dp"
        android:layout_height="176dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessageBody" />
</android.support.constraint.ConstraintLayout>
