<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="kr.co.isaveyou.isaveyou.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="177dp"
                android:layout_height="99dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/companylogo" />

            <EditText
                android:id="@+id/login_id"
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/login_num"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/login_pw"
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/login_pw"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_btn" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
