<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="visible">

    <TextView
        android:id="@+id/tv_monitoring"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="000"
        android:textSize="30dp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/tv_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="casual"
        android:text="@string/monitoring_text"
        android:textSize="30dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_monitoring" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/mybutton"
        android:text="@string/monitoring_start"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/btn_stop"
        tools:layout_editor_absoluteY="300dp" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:text="@string/monitoring_stop"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/btn_start"
        tools:layout_editor_absoluteX="221dp" />

</android.support.constraint.ConstraintLayout>